libs/pavex_macros/tests/from/fail/wildcard_not_standalone.rs
use pavex_macros::from;

fn main() {
    let _ = from![*, crate::router];
}
